--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,4 +26,6 @@
     <% end %>
   </div>
 </nav>
-<%= render partial: "shared/user_modal" %>
+<% if user_signed_in? %>
+  <%= render partial: "shared/user_modal" %>
+<% end %>
