created now routes with program id to render selected program cohorts

--- a/app/views/dashboard/_admin_sidebar.html.erb
+++ b/app/views/dashboard/_admin_sidebar.html.erb
@@ -85,7 +85,7 @@
     <ul class="mt-2 space-y-2"> 
       <% @programs_by_admin.each do |program| %>
       <li>
-        <button  class="text-sm text-black-500 ml-5"><%= program.name %></button>
+        <a href="" class="text-sm text-black-500 ml-5"><%= program.name %></a>
       <li>
       <% end %>
     </ul>     
