--- a/app/views/dashboard/_user_card.html.erb
+++ b/app/views/dashboard/_user_card.html.erb
@@ -1,15 +1,15 @@
-<div class="w-[17.688rem] h-[15.938rem] pt-6 px-6 bg-white rounded-[0.75rem] shadow-md">
+<div class="pt-6 px-6 bg-white rounded-[0.75rem] shadow-md">
     <h1 class="text-4xl font-bold"> Hi <%= current_user.first_name %>,</h1>
     <p class="text-sm text-gray-400 mt-2">What would you like to learn today?</p>
     <div class="flex items-center mt-5">
         <img src="<%= asset_path("sample_img/admin_user.png") %>" alt="User picture" class="w-16 h-16 rounded-full">
         <div class="ml-4">
             <h3 class="text-base font-semibold "><%= current_user.name %></h3>
-            <p class="text-sm text-gray-400 mt-1">Mentee</p>
+            <p class="text-sm text-gray-400 mt-1"><%= current_user.title %></p>
         </div>
     </div>
     <div class="-mx-6 border-t border-[#DCDCDC] mt-6"></div>
-    <div class="flex flex-start align-center mt-[0.75rem]">
+    <div class="flex flex-start align-center mt-[0.75rem] mb-5">
         <img src="<%= asset_path("icon/building.svg") %>" alt="Building logo" class="mr-1">
         <p class="text-xs text-400">Discovery Partners Institute</p>
     </div>
