program name section added and view cohort dashboard button works

--- a/app/views/dashboard/_admin_dashboard.html.erb
+++ b/app/views/dashboard/_admin_dashboard.html.erb
@@ -1,4 +1,3 @@
-<%= @current_program.name %>
 <div class="flex justify-center p-8">
   <!-- Sidebar -->
     <%= render partial: "admin_sidebar" %>
@@ -7,18 +6,22 @@
     <h1 class="text-2xl font-bold">Hi <%= current_user.name %></h1>
     <p class="text-gray-500">Welcome back to the Mentorship dashboard</p>
     <!-- Program Stats -->
-    <div class="grid grid-cols-3 gap-4 mt-6">
+    <div class="grid grid-cols-4 gap-4 mt-6">
+      <div class="p-6 bg-white shadow rounded-lg">
+        <p class="text-sm text-gray-500">Program Name</p>
+        <h3 id="program_name" class="text-lg font-semibold"><%= @current_program.name %></h3>
+      </div>
       <div class="p-6 bg-white shadow rounded-lg">
         <p class="text-sm text-gray-500">Cohort Name</p>
-        <h3 class="text-lg font-semibold">DPI Cohort 5</h3>
+        <h3 id="cohort_name" class="text-lg font-semibold">DPI Cohort 5</h3>
       </div>
       <div class="p-6 bg-white shadow rounded-lg">
         <p class="text-sm text-gray-500">Number of Pairing</p>
-        <h3 class="text-lg font-semibold">10 Pairs</h3>
+        <h3 id="nunber_of_parings" class="text-lg font-semibold">10 Pairs</h3>
       </div>
       <div class="p-6 bg-white shadow rounded-lg">
         <p class="text-sm text-gray-500">Scheduled Meetings</p>
-        <h3 class="text-lg font-semibold">16 Meetings</h3>
+        <h3 id="scheduled_meetings" class="text-lg font-semibold">16 Meetings</h3>
       </div>
     </div>
     <!-- Survey Ratings & Latest Surveys -->
@@ -101,6 +104,7 @@
     </div>
   </main>
 </div>
+
 <script>
   document.addEventListener('DOMContentLoaded', function () {
     const dropdowns = document.querySelectorAll('.dropdown');
