commented button out

--- a/app/views/dashboard/_program_card.html.erb
+++ b/app/views/dashboard/_program_card.html.erb
@@ -6,9 +6,9 @@
     <p class="text-[0.875rem] text-wrap text-[#898989] font-400 mb-2">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
     </p>
-    <button class="text-xs w-[8.75rem] h-[32px] bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md hover:bg-transparent hover:text-[#202020] hover:border-[#202020]"
+<!--    <button class="text-xs w-[8.75rem] h-[32px] bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md hover:bg-transparent hover:text-[#202020] hover:border-[#202020]"
             onclick="location.href='#'">
       Apply Pairing
-    </button>
+    </button>-->
   </div>
 </div>
