--- a/app/views/dashboard/_admin_dashboard.html.erb
+++ b/app/views/dashboard/_admin_dashboard.html.erb
@@ -13,15 +13,15 @@
       </div>
       <div class="p-6 bg-white shadow rounded-lg">
         <p class="text-sm text-gray-500">Cohort Name</p>
-        <h3 id="cohort_name" class="text-lg font-semibold">DPI Cohort 5</h3>
+        <h3 id="cohort_name" class="text-lg font-semibold"></h3>
       </div>
       <div class="p-6 bg-white shadow rounded-lg">
         <p class="text-sm text-gray-500">Number of Pairing</p>
-        <h3 id="nunber_of_parings" class="text-lg font-semibold">10 Pairs</h3>
+        <h3 id="nunber_of_parings" class="text-lg font-semibold"></h3>
       </div>
       <div class="p-6 bg-white shadow rounded-lg">
         <p class="text-sm text-gray-500">Scheduled Meetings</p>
-        <h3 id="scheduled_meetings" class="text-lg font-semibold">16 Meetings</h3>
+        <h3 id="scheduled_meetings" class="text-lg font-semibold"></h3>
       </div>
     </div>
     <!-- Survey Ratings & Latest Surveys -->
