added Admin Dashboard shortcut button

--- a/app/views/shared/_user_modal.html.erb
+++ b/app/views/shared/_user_modal.html.erb
@@ -75,6 +75,11 @@
           <%= current_user.bio %>
         </p>
       </div>
+
+      <!-- Admin Dashboard shortcut -->
+      <div class="col-span-2 bg-gray-50 p-4 rounded-lg shadow-sm">
+        <p onclick="window.location.href='/dashboard/admin'" class="font-medium text-center hover:text-gray-400 ">Go to Admin Dashboard</p>
+      </div>
     </div>
   </div>
 </div>
