fixed spelling error

--- a/app/views/dashboard/_admin_dashboard.html.erb
+++ b/app/views/dashboard/_admin_dashboard.html.erb
@@ -17,7 +17,7 @@
       </div>
       <div class="p-6 bg-white shadow rounded-lg">
         <p class="text-sm text-gray-500">Number of Pairing</p>
-        <h3 id="nunber_of_parings" class="text-lg font-semibold"><%= @cohorts.first.paring_number %> Pairs</h3>
+        <h3 id="nunber_of_pairings" class="text-lg font-semibold"><%= @cohorts.first.pairing_number %> Pairs</h3>
       </div>
       <div class="p-6 bg-white shadow rounded-lg">
         <p class="text-sm text-gray-500">Scheduled Meetings</p>
