--- a/app/views/dashboard/_mentee_dashboard.html.erb
+++ b/app/views/dashboard/_mentee_dashboard.html.erb
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-4 gap-5 py-9 px-24 max-w-[100%]">
+<div class="grid grid-col-1 sm:grid-cols-4 gap-5 py-9 px-24 max-w-[100%]">
   <!-- Left Section: Stack the two cards -->
   <div class="flex flex-col space-y-5 col-span-1">
     <%= render partial: 'user_card' %>
