update: flesh disappear after 2sec

--- a/app/views/shared/_flash_alert.html.erb
+++ b/app/views/shared/_flash_alert.html.erb
@@ -24,4 +24,8 @@
             element.style.display = 'none';
         }, 1000);
     }
+
+    setTimeout(function() {
+        fadeOut(document.getElementById('notice'));
+    }, 2000);
 </script>
