--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -5,11 +5,7 @@
     Transform potential into progress through <span class="font-bold">MentE</span>
   </h1>
   <div class="mt-8 flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
-    <button class="bg-gray-900 text-white px-6 py-3 text-2xl rounded-md hover:bg-gray-700 transition">
-      Sign up as Mentor
-    </button>
-    <button class="bg-gray-900 text-white px-6 py-3 text-2xl rounded-md hover:bg-gray-700 transition">
-      Sign up as Mentee
-    </button>
+      <%= link_to "Sign up as Mentor", signup_path(signup_type: "mentor"), class: "bg-gray-900 text-white px-6 py-3 text-2xl rounded-md hover:bg-gray-700 transition" %>
+      <%= link_to "Sign up as Mentee", signup_path(signup_type: "mentee"), class: "bg-gray-900 text-white px-6 py-3 text-2xl rounded-md hover:bg-gray-700 transition" %>
   </div>
 </div>
