Rerouted login link at the bottom of the signup page

--- a/app/views/users/registrations/signup.html.erb
+++ b/app/views/users/registrations/signup.html.erb
@@ -26,7 +26,7 @@
 
       <div class="mt-8 flex items-center justify-center space-x-2">
         <span class="text-gray-400 font-bold">Already a user?</span>
-        <a href="#" class="text-[#476d73] font-bold underline">Login</a>
+        <%= link_to "Login", new_user_session_path, class: "text-[#476d73] font-bold underline" %>
       </div>
     </div>
 
