update: nav link for dashboard

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,12 +1,14 @@
-<% if @role == "mentor" %>
-  <h1>Welcome, Mentor!</h1>
-  <% @mentors_data.each do |mentor| %>
-    <h3><%= mentor.user_id %></h3>
+<div class="mt-20">
+  <% if @role == "mentor" %>
+    <h1>Welcome, Mentor!</h1>
+    <% @mentors_data.each do |mentor| %>
+      <h3><%= mentor.user_id %></h3>
+    <% end %>
+  <% elsif @role == "mentee" %>
+    <%= render partial: "mentee_dashboard", locals: { mentors_data: @mentors_data } %>
+  <% elsif @role == "admin" %>
+    <%= render partial: "admin_dashboard" %>
+  <% else %>
+    <h1>Role not recognized.</h1>
   <% end %>
-<% elsif @role == "mentee" %>
-  <%= render partial: "mentee_dashboard", locals: { mentors_data: @mentors_data } %>
-<% elsif @role == "admin" %>
-  <%= render partial: "admin_dashboard" %>
-<% else %>
-  <h1>Role not recognized.</h1>
-<% end %>
+</div>
