--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -4,12 +4,13 @@
   <h1 class="font-light text-center w-full md:w-3/4 lg:w-1/2 text-5xl md:text-6xl mt-16">
     Transform potential into progress through <span class="font-bold">MentE</span>
   </h1>
-  <div class="mt-8 flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
-    <button class="bg-gray-900 text-white px-6 py-3 text-2xl rounded-md hover:bg-gray-700 transition">
-      Sign up as Mentor
-    </button>
-    <button class="bg-gray-900 text-white px-6 py-3 text-2xl rounded-md hover:bg-gray-700 transition">
-      Sign up as Mentee
+  <div class="mt-8">
+    <button class="bg-gray-900 text-white px-6 py-3 text-s rounded-md hover:scale-105 transition">
+      <% if user_signed_in? %>
+        <%= link_to "Start Mentorship", dashboard_path(role: current_user.role )%>
+      <% else %>
+        <%= link_to "Start Mentorship", new_user_session_path %>
+      <% end %>
     </button>
   </div>
 </div>
