--- a/app/views/shared/_landing_nav.html.erb
+++ b/app/views/shared/_landing_nav.html.erb
@@ -27,7 +27,7 @@
     <% else %>
       <div class="flex gap-4 items-center">
         <div class="text-s text-[#676666]">
-          <%= link_to "Sign Up", new_user_registration_path %>
+          <%= link_to "Sign Up", mentor_mentee_registration_path(signup_type: "mentee") %>
         </div>
         <div class="text-sm font-medium bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md
              py-2 px-5 mr-auto hover:scale-105">
