--- a/app/views/users/registrations/signup.html.erb
+++ b/app/views/users/registrations/signup.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white flex justify-center w-full">
+<div class="bg-white flex justify-center w-full mt-16">
   <div class="relative bg-white w-full min-h-screen flex flex-col lg:flex-row lg:flex-grow">
     
     <!-- right section with form (60% width) -->
