sign out button works now

--- a/app/views/shared/_landing_nav.html.erb
+++ b/app/views/shared/_landing_nav.html.erb
@@ -21,7 +21,7 @@
         </div>
         <div class="text-s font-medium bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md
              py-2 px-5 mr-auto hover:scale-105">
-          <%= link_to "Sign out", destroy_user_session_path, method: :delete, data: { turbo: false } %>
+          <%= button_to "Sign Out", destroy_user_session_path, method: :delete, data: { turbo: false } %>
         </div>
       </div>
     <% else %>
