--- a/app/views/dashboard/_mentee_dashboard.html.erb
+++ b/app/views/dashboard/_mentee_dashboard.html.erb
@@ -5,7 +5,11 @@
     <%= render partial: 'program_card' %>
   </div>
   <!-- Right Section: Main Content -->
-  <div class="col-span-3">
+  <% if @shortlist_time == false %>
+    <div class="col-span-3">
+  <% else %>
+    <div class="col-span-2">
+  <% end %>
     <h1 class="text-2xl font-semibold text-[#202020] mb-1">
       Available Mentors
     </h1>
@@ -13,14 +17,18 @@
       Discover insights and stories from our mentors to inspire your own journey.
     </p>
     <!-- Grid of mentors -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 max-w-[55rem] place-content-center">
+    <div id="mentor-list-section"  class="grid grid-cols-1 sm:grid-cols-2 gap-3 max-w-[55rem] place-content-center">
       <% available_mentors_count = 0 %>
       <% mentors_data.each do |mentor| %>
       <%# TODO: Refactor section below (might need to modify user methods in model or create new scope) %>
         <% current_mentee_count = mentor.mentee_capacity_count(mentor.cohort.id) %>
         <% capacity_cap = mentor.capacity %>
         <% if current_user.cohort.running? && current_mentee_count < capacity_cap %>
-          <%= render 'profile_card', mentor: mentor %>
+          <% if @shortlist_time == false %>
+            <%= render 'profile_card', mentor: mentor %>
+          <% else %>
+            <%= render 'profile_card_shortlist', mentor: mentor %>
+          <% end %>
           <% available_mentors_count += 1 %>
         <% end %>
       <% end %>
@@ -32,5 +40,11 @@
       <% end %>
     </div>
   </div>
+  <% if @shortlist_time == true %>
+    <div class="col-span-1">
+      <%= render partial: 'shortlist_card' %>
+    </div>
+  <% end %>
+  
 </div>
 
