--- a/app/views/shared/_cdn_assets.html.erb
+++ b/app/views/shared/_cdn_assets.html.erb
@@ -7,3 +7,7 @@
 
 <!-- Font Awesome Icons Link -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+<!-- Dragula -->
+<link rel="stylesheet" href="https://unpkg.com/dragula/dist/dragula.min.css">
+<script src="https://unpkg.com/dragula/dist/dragula.min.js"></script>
